package pivottracingspec;

option java_package = "edu.brown.cs.systems.pivottracing";
option java_outer_classname = "PTAgentProtos";

import "src/main/protobuf/Advice.proto";
import "src/main/protobuf/Weave.proto";

/* Command received by PT agents */
message PivotTracingCommand {
	optional PivotTracingUpdate update = 1; // Update woven advice
	optional bool sendStatus = 2;	// Instruct agent to send status
}

/*  Update woven advice */
message PivotTracingUpdate {
	optional bool removeAll = 1;	// If true, all existing weaves should be removed
	repeated WeaveSpec weave = 2;	// List of advice to weave at tracepoints
	repeated bytes remove = 3;		// List of IDs of weaves that should be removed
}

/*  Information about a PT agent */
message AgentInfo {
	required string procName = 1;
	required int64 procId = 2;
	required string host = 3;
}

/*  A problem installing a query, most likely an exception */
message Problem {
	required string name = 1;
	required string message = 2;
	required string stacktrace = 3;
}

/* Agents report their status */
message AgentStatus {
	required AgentInfo agent = 1;
	required bool dynamicInstrumentationEnabled = 2; // Is dynamic instrumentation enabled in the process?
	repeated HardcodedTracepointSpec hardcodedTracepoints = 3; // Known hardcoded tracepoints
	repeated WeaveSpec woven = 4; // Woven advice
	repeated Problem problem = 5; // Problems weaving
}